--- a/TnTComponents/Archive/Grid/TnTDataGrid.razor
+++ b/TnTComponents/Archive/Grid/TnTDataGrid.razor
@@ -1,7 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Components.Rendering
-@using TnTComponents.Events
-@using TnTComponents.Grid.Columns
-@using TnTComponents.Grid.Infrastructure
+@using TnTComponents.Archive.Grid.Infrastructure
 @inherits TnTComponentBase
 @typeparam TGridItem
 @implements ITnTDataGridSettings<TGridItem>
