--- a/TnTComponents/Styles/Components/_header.scss
+++ b/TnTComponents/Styles/Components/_header.scss
@@ -1,37 +1,31 @@
 ﻿.tnt-header {
-    min-height: 2.5rem;
-    align-items: center;
-    overflow-x: hidden;
-    white-space: nowrap;
-    transition: ease-in-out 150ms;
-    position: sticky;
-    z-index: 998;
-    display: flex;
+    height: 64px;
     width: 100%;
+    background-color: $tnt-color-surface;
+    display: flex;
+    position: fixed;
+    top: 0;
+    transition: ease-in-out 150ms;
+    align-items: center;
+    color: $tnt-color-on-surface;
+    @extend .title-large;
 
-    @extend .tnt-z-depth-1;
-
-    h1 {
-        font-size: 2rem;
-        padding: 0 .5rem;
+    &.scroll {
+        background-color: $tnt-color-surface-container;
+        @include tnt-z-depth(2);
     }
 
-    a {
-        cursor: pointer;
+    i {
+        margin: 0 24px 0 16px;
+        font-size: 24px;
+        border-radius: 100%;
+
+        @include tnt-clickable(background-color, $tnt-color-on-surface, $tnt-color-surface);
     }
 
-    @media #{$medium-and-up} {
-        width: calc(100% - 250px);
+    &.expanded {
         padding-left: 250px;
     }
 
-    @media #{$small-and-down} {
-        padding-left: 0;
-        width: 100%;
 
-        &.expanded {
-            width: calc(100% - 250px);
-            padding-left: 250px;
-        }
-    }
 }
