--- a/TnTComponents/Styles/Components/_sidenav.scss
+++ b/TnTComponents/Styles/Components/_sidenav.scss
@@ -1,97 +1,255 @@
-﻿.tnt-sidebar-transition {
-    transition: transform ease-in-out 150ms;
-}
-
-.tnt-side-nav {
+﻿.tnt-side-nav {
     position: fixed;
-    left: 0;
-    top: 0;
-    margin: 0.2rem 0 0.2rem 0;
+    height: 100%;
+    background-color: red;
     width: 250px;
-    height: calc(100% - 0.4rem);
+    left: -105%;
+    box-sizing: border-box;
+    transition: ease-in-out 150ms;
+    border-radius: 0 16px 16px 0;
+    background-color: $tnt-color-surface-container-high;
     z-index: 999;
-    overflow-y: auto;
-    will-change: transform;
-    backface-visibility: hidden;
-    transform: translateX(-105%);
-    border-radius: 16px;
-    @extend .tnt-z-depth-2;
-    @extend .tnt-sidebar-transition;
+    display: flex;
+    flex-direction: column;
+    padding: 12px 12px;
 
-    .tnt-side-nav-list {
-        padding: 0;
+    @include tnt-z-depth(2);
 
-        .tnt-side-nav-list-item {
-            float: none;
-            list-style-type: none;
-            line-height: 16px;
-            vertical-align: middle;
-            margin: 0 12px;
-            @extend .tnt-border-radius-9;
 
+    &.expanded {
+        left: 0;
+    }
+
+    i {
+        user-select: none;
+    }
+
+    .tnt-side-nav-headline {
+        margin: 0 28px 0 28px;
+        @extend .title-small;
+    }
+
+    .tnt-side-nav-menu-link, .tnt-side-nav-menu-group {
+        &[disabled] {
+            opacity: 0.2;
+            cursor: not-allowed;
+        }
+
+        display: flex;
+        margin: 1px 0;
+    }
+
+    .tnt-side-nav-menu-link, .tnt-side-nav-menu-group > .tnt-side-nav-menu-group-header {
+        flex-direction: row;
+        align-items: center;
+        height: 56px;
+        color: $tnt-color-on-surface-variant;
+        @include enable-ripple($tnt-color-on-secondary-container);
+        @include tnt-border-radius(10);
+
+        i {
+            font-size: 24px;
+            margin-left: 16px;
+        }
+
+        &:not(:has([disabled])) {
             &:hover {
-                background-color: rgba(0,0,0,.05);
+                background-color: color-mix(in srgb, $tnt-color-on-surface, transparent 92%);
+
+                &:has(a.active) {
+                    background-color: color-mix(in srgb, $tnt-color-on-secondary-container, transparent 92%);
+                }
+            }
+        }
+
+        &:has(a.active) {
+            color: $tnt-color-on-secondary-container;
+            background-color: color-mix(in srgb, $tnt-color-on-secondary-container, transparent 96%);
+        }
+
+        a, .tnt-side-nav-menu-group-title {
+            margin-left: 28px;
+            text-decoration: none;
+            color: inherit;
+            @extend .label-large;
+        }
+
+        &:has(i:first-child) {
+            a, .tnt-side-nav-menu-group-title {
+                margin-left: 12px;
+            }
+        }
+
+        .tnt-side-nav-menu-link-status {
+            margin-left: auto;
+            margin-right: 16px;
+            @extend .label-large;
+        }
+    }
+
+    .tnt-side-nav-menu-group {
+        flex-direction: column;
+        cursor: pointer;
+
+        &.disabled {
+            cursor: not-allowed;
+        }
+
+        & > .tnt-side-nav-menu-group-header {
+            height: 56px;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            @include enable-ripple($tnt-color-on-secondary-container);
+            @include tnt-border-radius(10);
+
+            & > .drop-down-indicator {
+                transition: 150ms;
+                margin-left: auto;
+            }
+        }
+
+        .tnt-side-nav-menu-group-children {
+            margin-left: 12px;
+            padding-left: 4px;
+            transition: 150ms;
+            border-left: 1px solid $tnt-color-outline;
+            height: fit-content;
+
+            * {
+                transition: 150ms;
+            }
+        }
+
+        &.expanded {
+            & > .tnt-side-nav-menu-group-header {
+                background-color: color-mix(in srgb, $tnt-color-on-surface, transparent 92%);
+            }
+        }
+
+        &:not(.expanded) {
+            .drop-down-indicator {
+                transform: rotateZ(180deg);
             }
 
-            &:active {
-                background-color: rgba(0,0,0,.05);
-            }
+            .tnt-side-nav-menu-group-children {
+                height: 0px;
 
-            > a {
-                display: block;
-                font-weight: bold;
-                text-decoration: none;
-                vertical-align: top;
-                font-size: 1.1rem;
-                height: 3.25rem;
-                line-height: 3.25rem;
-                margin: 8px 24px;
-
-                > i,
-                > i.material-icons {
-                    float: left;
-                    padding-right: 1rem;
-                    line-height: 3.25rem;
-                }
-
-                > i.material-icons {
-                    vertical-align: middle;
-                }
-
-                &:not(:has(i)) {
-                    margin-left: 65px;
+                * {
+                    height: 0px;
                 }
             }
         }
     }
-
-    @media #{$medium-and-up} {
-        position: fixed;
-        transform: translateX(-5%);
-        padding-left: 0.1rem;
-    }
-
-    @media #{$small-and-down} {
-        &.expand {
-            position: fixed;
-            transform: translateX(5%);
-        }
-    }
 }
 
-.tnt-sidebar-button {
-    cursor: pointer;
-    @extend .tnt-sidebar-transition;
+.tnt-side-nav-toggle i {
+    margin: 0 24px 0 16px;
+    font-size: 24px;
+    border-radius: 100%;
 
-    @media #{$medium-and-up} {
-        visibility: hidden;
-    }
-
-    @media #{$small-and-down} {
-        visibility: visible;
-    }
+    @include tnt-clickable(background-color, $tnt-color-on-surface, $tnt-color-surface);
 }
 
-.tnt-sidebar-button {
-    cursor: pointer;
+.tnt-side-nav-menu-link {
 }
+
+
+
+//.tnt-sidebar-transition {
+//    transition: transform ease-in-out 150ms;
+//}
+
+//.tnt-side-nav {
+//    position: fixed;
+//    left: 0;
+//    top: 0;
+//    margin: 0.2rem 0 0.2rem 0;
+//    width: 250px;
+//    height: calc(100% - 0.4rem);
+//    z-index: 999;
+//    overflow-y: auto;
+//    will-change: transform;
+//    backface-visibility: hidden;
+//    transform: translateX(-105%);
+//    border-radius: 16px;
+//    @extend .tnt-z-depth-2;
+//    @extend .tnt-sidebar-transition;
+
+//    .tnt-side-nav-list {
+//        padding: 0;
+
+//        .tnt-side-nav-list-item {
+//            float: none;
+//            list-style-type: none;
+//            line-height: 16px;
+//            vertical-align: middle;
+//            margin: 0 12px;
+//            @extend .tnt-border-radius-9;
+
+//            &:hover {
+//                background-color: rgba(0,0,0,.05);
+//            }
+
+//            &:active {
+//                background-color: rgba(0,0,0,.05);
+//            }
+
+//            > a {
+//                display: block;
+//                font-weight: bold;
+//                text-decoration: none;
+//                vertical-align: top;
+//                font-size: 1.1rem;
+//                height: 3.25rem;
+//                line-height: 3.25rem;
+//                margin: 8px 24px;
+
+//                > i,
+//                > i.material-icons {
+//                    float: left;
+//                    padding-right: 1rem;
+//                    line-height: 3.25rem;
+//                }
+
+//                > i.material-icons {
+//                    vertical-align: middle;
+//                }
+
+//                &:not(:has(i)) {
+//                    margin-left: 65px;
+//                }
+//            }
+//        }
+//    }
+
+//    @media #{$medium-and-up} {
+//        position: fixed;
+//        transform: translateX(-5%);
+//        padding-left: 0.1rem;
+//    }
+
+//    @media #{$small-and-down} {
+//        &.expand {
+//            position: fixed;
+//            transform: translateX(5%);
+//        }
+//    }
+//}
+
+//.tnt-sidebar-button {
+//    cursor: pointer;
+//    @extend .tnt-sidebar-transition;
+
+//    @media #{$medium-and-up} {
+//        visibility: hidden;
+//    }
+
+//    @media #{$small-and-down} {
+//        visibility: visible;
+//    }
+//}
+
+//.tnt-sidebar-button {
+//    cursor: pointer;
+//}
