--- a/TnTComponents/Styles/Components/_body.scss
+++ b/TnTComponents/Styles/Components/_body.scss
@@ -1,22 +1,36 @@
 ﻿.tnt-body {
+    display: block;
     width: 100%;
-    min-height: calc(100% - 2.5rem);
-    margin-left: 0;
-    transition: width ease-in-out 150ms;
-    transition: margin-left ease-in-out 150ms;
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
+    transition: ease-in-out 150ms;
+    min-height: 100vh;
 
     @media #{$medium-and-up} {
-        width: calc(100% - calc(260px + 10px));
-        margin-left: 260px;
-        margin-right: 10px;
+        &.expanded {
+            width: calc(100% - $tnt-side-nav-width);
+            padding-left: $tnt-side-nav-width;
+        }
+    }
+}
+
+
+:root {
+    &:has(.tnt-header) {
+        .tnt-body {
+            min-height: calc(100vh - $tnt-header-height);
+            padding-top: $tnt-header-height;
+        }
     }
 
-    @media #{$small-and-down} {
-        transform: translateX(0%);
-        width: calc(100% - 20px);
-        margin: 0 10px;
+    &:has(.tnt-footer) {
+        .tnt-body {
+            min-height: calc(100vh - $tnt-footer-height);
+            padding-bottom: $tnt-footer-height;
+        }
+    }
+
+    &:has(.tnt-footer):has(.tnt-header) {
+        .tnt-body {
+            min-height: calc(100vh - calc($tnt-header-height + $tnt-footer-height));
+        }
     }
 }
