Stubbing out design theme

--- a/LiveTest/LiveTest/Components/App.razor
+++ b/LiveTest/LiveTest/Components/App.razor
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="LiveTest.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
-     <link rel="stylesheet" href="_content/TnTComponents/variables.min.css" />
     <link rel="stylesheet" href="_content/TnTComponents/style.min.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
@@ -18,6 +17,7 @@
 <body>
     <Routes />
     <script src="_framework/blazor.web.js"></script>
+    <TnTComponents.TnTDesignTheme IsDark="false"/>
 </body>
 
 </html>
