Added constraints to ripple

--- a/TnTComponents/TnTQuickGrid.razor
+++ b/TnTComponents/TnTQuickGrid.razor
@@ -9,5 +9,5 @@
     }
 </div>
 
-<TnTPageScript Src="./_content/TnTComponents/Grid/TnTQuickGrid.razor.js" />
-<TnTPageScript Src="./_content/TnTComponents/TnTButton.razor.js?class=col-title" />
+<TnTPageScript Src="./_content/TnTComponents/TnTQuickGrid.razor.js" />
+<TnTPageScript Src="./_content/TnTComponents/TnTButton.razor.js?class=col-title&elementConstraint=button" />
