Updated to allow form fields to be used with form

--- a/TnTComponents/Forms/TnTInputBase.razor
+++ b/TnTComponents/Forms/TnTInputBase.razor
@@ -44,7 +44,7 @@
     @if (!string.IsNullOrWhiteSpace(SupportingText)) {
         <span class="@SupportingTextClass">@SupportingText</span>
     }
-    @if (ShowValidation) {
+    @if (ShowValidation && EditContext is not null) {
         <ValidationMessage class="@ValidationClass" For="ValueExpression" />
     }
 </label>
