--- a/TnTComponents/Styles/Common/_layout.scss
+++ b/TnTComponents/Styles/Common/_layout.scss
@@ -34,119 +34,132 @@ $element-bottom-margin: ($gutter-width*2)/3 !default;
     }
 }
 
+@mixin reset-offset {
+    margin-left: auto;
+    left: auto;
+    right: auto;
+}
+
 .tnt-grid-layout {
     display: grid;
 }
 
-.tnt-row {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-
-    &:not(:has(> .tnt-col)) {
-        padding: 4px;
-        width: calc(100% - 4px);
-    }
-}
-
-.tnt-col {
-    display: flex;
-    flex-direction: column;
-    min-height: 1px;
-    padding: 4px;
-
-    &[class*="-push"],
-    &[class*="-pull"] {
-        position: relative;
-    }
-
-    $i: 1;
-
-    @while $i <= $num-cols {
-        $perc: unquote((100 / ($num-cols / $i)) + "%");
-
-        &.s#{$i} {
-            width: $perc;
-        }
-
-        $i: $i + 1;
-    }
-
-    $i: 1;
-
-    @while $i <= $num-cols {
-        $perc: unquote((100 / ($num-cols / $i)) + "%");
-        @include grid-classes("s", $i, $perc);
-        $i: $i + 1;
-    }
-
-    @media #{$medium-and-up} {
-        $i: 1;
-
-        @while $i <= $num-cols {
-            $perc: unquote((100 / ($num-cols / $i)) + "%");
-
-            &.m#{$i} {
-                width: $perc;
-            }
-
-            $i: $i + 1
-        }
-
-        $i: 1;
-
-        @while $i <= $num-cols {
-            $perc: unquote((100 / ($num-cols / $i)) + "%");
-            @include grid-classes("m", $i, $perc);
-            $i: $i + 1;
-        }
-    }
-
-    @media #{$large-and-up} {
-        $i: 1;
-
-        @while $i <= $num-cols {
-            $perc: unquote((100 / ($num-cols / $i)) + "%");
-
-            &.l#{$i} {
-                width: $perc;
-            }
-
-            $i: $i + 1;
-        }
-
-        $i: 1;
-
-        @while $i <= $num-cols {
-            $perc: unquote((100 / ($num-cols / $i)) + "%");
-            @include grid-classes("l", $i, $perc);
-            $i: $i + 1;
-        }
-    }
-
-    @media #{$extra-large-and-up} {
-        $i: 1;
-
-        @while $i <= $num-cols {
-            $perc: unquote((100 / ($num-cols / $i)) + "%");
-
-            &.xl#{$i} {
-                width: $perc;
-            }
-
-            $i: $i + 1;
-        }
-
-        $i: 1;
-
-        @while $i <= $num-cols {
-            $perc: unquote((100 / ($num-cols / $i)) + "%");
-            @include grid-classes("xl", $i, $perc);
-            $i: $i + 1;
-        }
-    }
-}
-
 .tnt-container {
-    margin: 8px;
+    padding: 8px;
+}
+.tnt-row {
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+    // Clear floating children
+    &:after {
+        content: "";
+        display: table;
+        clear: both;
+    }
+
+    .tnt-col {
+        float: left;
+        box-sizing: border-box;
+        padding: 0 $gutter-width / 2;
+        min-height: 1px;
+
+        &[class*="push-"],
+        &[class*="pull-"] {
+            position: relative;
+        }
+
+        $i: 1;
+
+        @while $i <= $num-cols {
+            $perc: unquote((100 / ($num-cols / $i)) + "%");
+
+            &.s#{$i} {
+                width: $perc;
+                @include reset-offset;
+            }
+
+            $i: $i + 1;
+        }
+
+        $i: 1;
+
+        @while $i <= $num-cols {
+            $perc: unquote((100 / ($num-cols / $i)) + "%");
+            @include grid-classes("s", $i, $perc);
+            $i: $i + 1;
+        }
+
+        @media #{$medium-and-up} {
+
+            $i: 1;
+
+            @while $i <= $num-cols {
+                $perc: unquote((100 / ($num-cols / $i)) + "%");
+
+                &.m#{$i} {
+                    width: $perc;
+                    @include reset-offset;
+                }
+
+                $i: $i + 1
+            }
+
+            $i: 1;
+
+            @while $i <= $num-cols {
+                $perc: unquote((100 / ($num-cols / $i)) + "%");
+                @include grid-classes("m", $i, $perc);
+                $i: $i + 1;
+            }
+        }
+
+        @media #{$large-and-up} {
+
+            $i: 1;
+
+            @while $i <= $num-cols {
+                $perc: unquote((100 / ($num-cols / $i)) + "%");
+
+                &.l#{$i} {
+                    width: $perc;
+                    @include reset-offset;
+                }
+
+                $i: $i + 1;
+            }
+
+            $i: 1;
+
+            @while $i <= $num-cols {
+                $perc: unquote((100 / ($num-cols / $i)) + "%");
+                @include grid-classes("l", $i, $perc);
+                $i: $i + 1;
+            }
+        }
+
+        @media #{$extra-large-and-up} {
+
+            $i: 1;
+
+            @while $i <= $num-cols {
+                $perc: unquote((100 / ($num-cols / $i)) + "%");
+
+                &.xl#{$i} {
+                    width: $perc;
+                    @include reset-offset;
+                }
+
+                $i: $i + 1;
+            }
+
+            $i: 1;
+
+            @while $i <= $num-cols {
+                $perc: unquote((100 / ($num-cols / $i)) + "%");
+                @include grid-classes("xl", $i, $perc);
+                $i: $i + 1;
+            }
+        }
+    }
 }
