--- a/TnTComponents/Styles/Components/_datagrid.scss
+++ b/TnTComponents/Styles/Components/_datagrid.scss
@@ -15,6 +15,7 @@
             position: sticky;
             top: 0;
             box-shadow: 0px 1px $tnt-color-outline;
+            z-index: 3;
 
             tr {
                 th {
@@ -122,6 +123,11 @@
                     min-width: 16px;
                     white-space: nowrap;
                     @extend .body-medium;
+
+                    &.col-justify-right {
+                        margin-right:8px;
+                        float: right;
+                    }
                 }
 
                 &:hover, &:nth-child(even):hover {
