Work of buttons and color themeing. Attempting to simplify css

--- a/LiveTest/LiveTest.Client/Pages/Buttons.razor
+++ b/LiveTest/LiveTest.Client/Pages/Buttons.razor
@@ -3,161 +3,8 @@
 @using TnTComponents.Common
 @using TnTComponents.Enum
 
-<TnTRow FlexWrap="WrapStyle.Wrap">
-    <TnTColumn>
-        <TnTStack Direction="Orientation.Horizontal">
-            <TnTButton Title="Title" Appearance="ButtonAppearance.Elevated" StartIcon="search" EndIcon="home">
-                Button
-            </TnTButton>
-            <TnTButton Title="Title" Appearance="ButtonAppearance.Filled" StartIcon="search" EndIcon="home">
-                Button
-            </TnTButton>
-            <TnTButton Title="Title" Appearance="ButtonAppearance.FilledAlternative" StartIcon="search" EndIcon="home">
-                Button
-            </TnTButton>
-            <TnTButton Title="Title" Appearance="ButtonAppearance.Outlined" StartIcon="search" EndIcon="home">
-                Button
-            </TnTButton>
-            <TnTButton Title="Title" Appearance="ButtonAppearance.Text" StartIcon="search" EndIcon="home">
-                Button
-            </TnTButton>
-        </TnTStack>
-    </TnTColumn>
-    <TnTColumn>
-        <TnTStack Direction="Orientation.Horizontal">
-            <TnTButton Title="Title" Appearance="ButtonAppearance.Elevated" StartIcon="search" EndIcon="home" Disabled="true">
-                Button
-            </TnTButton>
-            <TnTButton Title="Title" Appearance="ButtonAppearance.Filled" StartIcon="search" EndIcon="home" Disabled="true">
-                Button
-            </TnTButton>
-            <TnTButton Title="Title" Appearance="ButtonAppearance.FilledAlternative" StartIcon="search" EndIcon="home" Disabled="true">
-                Button
-            </TnTButton>
-            <TnTButton Title="Title" Appearance="ButtonAppearance.Outlined" StartIcon="search" EndIcon="home" Disabled="true">
-                Button
-            </TnTButton>
-            <TnTButton Title="Title" Appearance="ButtonAppearance.Text" StartIcon="search" EndIcon="home" Disabled="true">
-                Button
-            </TnTButton>
-        </TnTStack>
-    </TnTColumn>
 
-    <TnTColumn>
-        <TnTStack Direction="Orientation.Horizontal">
-            <TnTButton Title="Title" Appearance="ButtonAppearance.Elevated" StartIcon="search">
-                Button
-            </TnTButton>
-            <TnTButton Title="Title" Appearance="ButtonAppearance.Filled" StartIcon="search">
-                Button
-            </TnTButton>
-            <TnTButton Title="Title" Appearance="ButtonAppearance.FilledAlternative" StartIcon="search">
-                Button
-            </TnTButton>
-            <TnTButton Title="Title" Appearance="ButtonAppearance.Outlined" StartIcon="search">
-                Button
-            </TnTButton>
-            <TnTButton Title="Title" Appearance="ButtonAppearance.Text" StartIcon="search">
-                Button
-            </TnTButton>
-        </TnTStack>
-    </TnTColumn>
-
-    <TnTColumn>
-        <TnTStack Direction="Orientation.Horizontal">
-            <TnTButton Title="Title" Appearance="ButtonAppearance.Elevated" StartIcon="search" Disabled="true">
-                Button
-            </TnTButton>
-            <TnTButton Title="Title" Appearance="ButtonAppearance.Filled" StartIcon="search" Disabled="true">
-                Button
-            </TnTButton>
-            <TnTButton Title="Title" Appearance="ButtonAppearance.FilledAlternative" StartIcon="search" Disabled="true">
-                Button
-            </TnTButton>
-            <TnTButton Title="Title" Appearance="ButtonAppearance.Outlined" StartIcon="search" Disabled="true">
-                Button
-            </TnTButton>
-            <TnTButton Title="Title" Appearance="ButtonAppearance.Text" StartIcon="search" Disabled="true">
-                Button
-            </TnTButton>
-        </TnTStack>
-    </TnTColumn>
-
-    <TnTColumn>
-        <TnTStack Direction="Orientation.Horizontal">
-            <TnTButton Title="Title" Appearance="ButtonAppearance.Elevated" EndIcon="home">
-                Button
-            </TnTButton>
-            <TnTButton Title="Title" Appearance="ButtonAppearance.Filled" EndIcon="home">
-                Button
-            </TnTButton>
-            <TnTButton Title="Title" Appearance="ButtonAppearance.FilledAlternative" EndIcon="home">
-                Button
-            </TnTButton>
-            <TnTButton Title="Title" Appearance="ButtonAppearance.Outlined" EndIcon="home">
-                Button
-            </TnTButton>
-            <TnTButton Title="Title" Appearance="ButtonAppearance.Text" EndIcon="home">
-                Button
-            </TnTButton>
-        </TnTStack>
-    </TnTColumn>
-    <TnTColumn>
-        <TnTStack Direction="Orientation.Horizontal">
-            <TnTButton Title="Title" Appearance="ButtonAppearance.Elevated" EndIcon="home" Disabled="true">
-                Button
-            </TnTButton>
-            <TnTButton Title="Title" Appearance="ButtonAppearance.Filled" EndIcon="home" Disabled="true">
-                Button
-            </TnTButton>
-            <TnTButton Title="Title" Appearance="ButtonAppearance.FilledAlternative" EndIcon="home" Disabled="true">
-                Button
-            </TnTButton>
-            <TnTButton Title="Title" Appearance="ButtonAppearance.Outlined" EndIcon="home" Disabled="true">
-                Button
-            </TnTButton>
-            <TnTButton Title="Title" Appearance="ButtonAppearance.Text" EndIcon="home" Disabled="true">
-                Button
-            </TnTButton>
-        </TnTStack>
-    </TnTColumn>
-
-    <TnTColumn>
-        <TnTStack Direction="Orientation.Horizontal">
-            <TnTButton Title="Title" Appearance="ButtonAppearance.Elevated">
-                Button
-            </TnTButton>
-            <TnTButton Title="Title" Appearance="ButtonAppearance.Filled">
-                Button
-            </TnTButton>
-            <TnTButton Title="Title" Appearance="ButtonAppearance.FilledAlternative">
-                Button
-            </TnTButton>
-            <TnTButton Title="Title" Appearance="ButtonAppearance.Outlined">
-                Button
-            </TnTButton>
-            <TnTButton Title="Title" Appearance="ButtonAppearance.Text">
-                Button
-            </TnTButton>
-        </TnTStack>
-    </TnTColumn>
-    <TnTColumn>
-        <TnTStack Direction="Orientation.Horizontal">
-            <TnTButton Title="Title" Appearance="ButtonAppearance.Elevated" Disabled="true">
-                Button
-            </TnTButton>
-            <TnTButton Title="Title" Appearance="ButtonAppearance.Filled" Disabled="true">
-                Button
-            </TnTButton>
-            <TnTButton Title="Title" Appearance="ButtonAppearance.FilledAlternative" Disabled="true">
-                Button
-            </TnTButton>
-            <TnTButton Title="Title" Appearance="ButtonAppearance.Outlined" Disabled="true">
-                Button
-            </TnTButton>
-            <TnTButton Title="Title" Appearance="ButtonAppearance.Text" Disabled="true">
-                Button
-            </TnTButton>
-        </TnTStack>
-    </TnTColumn>
-</TnTRow>
+<LiveTest.Client.Components.ButtonsTesting />
+<LiveTest.Client.Components.ButtonsTesting @rendermode="@RenderMode.InteractiveServer" />
+<LiveTest.Client.Components.ButtonsTesting @rendermode="@RenderMode.InteractiveWebAssembly" />
+<LiveTest.Client.Components.ButtonsTesting @rendermode="@RenderMode.InteractiveAuto" />
