Added theme toggle

--- a/LiveTest/LiveTest/Components/Layout/MainLayout.razor
+++ b/LiveTest/LiveTest/Components/Layout/MainLayout.razor
@@ -4,6 +4,7 @@
 <TnTLayout>
     <TnTHeader>
         <TnTSideNavToggle />
+        <TnTThemeToggle />
         This is my header
     </TnTHeader>
 
