Updated to icon inside buttons

--- a/LiveTest/LiveTest.Client/Components/ButtonsTesting.razor
+++ b/LiveTest/LiveTest.Client/Components/ButtonsTesting.razor
@@ -1,7 +1,9 @@
 ﻿@using TnTComponents
 
 <TnTComponents.TnTButton>
+    <MaterialIcon Icon="@MaterialIcons.Search" Color="TnTColorEnum.Primary" />
     Button Text
+    <MaterialIcon Icon="@MaterialIcons.Poll" Color="TnTColorEnum.Secondary" />
 </TnTComponents.TnTButton>
 
 <TnTComponents.TnTButton Appearance="ButtonAppearance.Outlined">
