--- a/TnTComponents/Icons/MaterialIcon.razor
+++ b/TnTComponents/Icons/MaterialIcon.razor
@@ -1,4 +1,5 @@
 ﻿@namespace TnTComponents
+@using TnTComponents.Core
 
 <span class="@GetClass()">@Icon.Icon</span>
 
@@ -9,8 +10,11 @@
     [Parameter]
     public MaterialIconAppearance Appearance { get; set; } = MaterialIconAppearance.Default;
 
+    [Parameter]
+    public TnTColorEnum Color { get; set; } = TnTColorEnum.OnSurface;
+
     [Parameter, EditorRequired]
-    public MaterialIcon Icon { get; set; } = default!;
+    public MaterialIcons Icon { get; set; } = default!;
 
     protected override void OnInitialized() {
         base.OnInitialized();
@@ -20,6 +24,7 @@
 
     private string GetClass() {
         var appearanceClass = "material-icons " + Appearance switch {
+            MaterialIconAppearance.Default => "",
             MaterialIconAppearance.Outlined => "material-icons-outlined ",
             MaterialIconAppearance.TwoTone => "material-icons-two-tone ",
             MaterialIconAppearance.Round => "material-icons-round ",
@@ -34,7 +39,7 @@
             _ => throw new InvalidOperationException($"Must provide a valid value for {nameof(Size)}. The value {Size} is invalid!")
         };
 
-        return appearanceClass + sizeClass;
+        return CssBuilder.Create("tnt-icon " + appearanceClass + sizeClass).AddForegroundColor(Color).Build();
     }
 
 }
